# flatfetch

./: .gitignore  README.md
new-flatfetch/: Cargo.toml  flatfetch.1  linuxmacos-installer.sh  uninstaller.sh
new-flatfetch/src/: main.rs  request_sender.rs
